Ajustes nas datas e likes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     				<td colspan="2">{{item.content}}</td>
   				</tr>
 				<tr>
-    				<td>Likes: {{item.likes}}</td>
+    				<td><i class="fa fa-heart"></i> {{item.likes}}</td>
   				</tr>
 			</table>			
 		</div>
